Opened 16 years ago
Closed 15 years ago
#3440 closed bug (fixed)
Terminal : incorrect line wrapping on resize
Reported by: | mmadia | Owned by: | bonefish |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Terminal | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Normally when resizing Terminal, any existing and new lines of text will wrap as needed. However, there is one case where this fails: "AnyValue x 9". As soon as the number of rows is increased by resizing, text wrapping functions properly.
As a note, I have not been able to resize the window while maintaining the same exact pixel height.
The easiest way to reproduce this is to first resize Terminal to have a small X-axis value. Then reduce the Y-axis to its smallest value. Finally, while keeping the Y-axis the same, increase the X-axis.
hrev29153, gcc2, bare metal.
Attachments (1)
Change History (4)
by , 16 years ago
Attachment: | terminalincorrectlinewrtj1.png added |
---|
comment:1 by , 15 years ago
comment:2 by , 15 years ago
Owner: | changed from | to
---|---|
Version: | R1/pre-alpha1 → R1/Development |
Note:
See TracTickets
for help on using tickets.
still persistent in hrev34159