BasicTerminalBuffer::ResizeTo(): Introduced laxer buffer size limits than the terminal size limits defined in TermConst.h. Fixes #3440, although the main cause -- the incorrect computation of the window size limits -- still exists.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35599 a95241bf-73f2-0310-859d-f6bbb57e9c96